@@ -25,6 +25,8 @@ Version 0.11
   and it's documented that tokenization with this lexer may
   raise exceptions.
 
+- Added Lighttpd conf lexer
+
 
 Version 0.10
 ------------
